tests/invalid/coerce_instvar.err_exp
coerce_instvar.m:043: In clause for `bad(in((I =< ground)), out((I =<
coerce_instvar.m:043:   ground)))':
coerce_instvar.m:043:   in coerce:
coerce_instvar.m:043:   mode error: the input term has instantiatedness
coerce_instvar.m:043:   `( I =< ground )',
coerce_instvar.m:043:   and cannot be converted to the type
coerce_instvar.m:043:   `coerce_instvar.citrus'.
